# litebox

.github/tools/: determine_semver_packages.py
.github/workflows/: ci.yml  semver-checks.yml
dev_tests/src/: ratchet.rs
litebox/src/event/: observer.rs
litebox/src/fs/: layered.rs  tests.rs
litebox/src/mm/: linux.rs
litebox/src/platform/: mock.rs  mod.rs
litebox_common_linux/src/: lib.rs  loader.rs  physical_pointers.rs  vmap.rs
litebox_common_optee/src/: lib.rs
litebox_platform_linux_kernel/: Cargo.toml
litebox_platform_linux_kernel/src/: lib.rs
litebox_platform_linux_kernel/src/mm/: tests.rs
litebox_platform_linux_userland/src/: lib.rs
litebox_platform_lvbs/: Cargo.toml
litebox_platform_lvbs/src/: lib.rs
litebox_platform_lvbs/src/arch/x86/mm/: paging.rs
litebox_platform_lvbs/src/host/: bootparam.rs  lvbs_impl.rs  mod.rs
litebox_platform_lvbs/src/mm/: mod.rs  tests.rs
litebox_platform_lvbs/src/mshv/: error.rs  mod.rs  ringbuffer.rs  vsm.rs
litebox_platform_multiplex/: Cargo.toml
litebox_platform_windows_userland/src/: lib.rs
litebox_runner_linux_on_windows_userland/src/: lib.rs
litebox_runner_linux_userland/src/: lib.rs
litebox_runner_linux_userland/tests/: dup.c  getitimer.c  helpers.h  sendmmsg.c  setitimer.c
litebox_runner_lvbs/src/: lib.rs
litebox_runner_optee_on_linux_userland/src/: tests.rs
litebox_runner_snp/src/: main.rs
litebox_shim_linux/: Cargo.toml
litebox_shim_linux/src/: lib.rs  wait.rs
litebox_shim_linux/src/loader/: elf.rs
litebox_shim_linux/src/syscalls/: file.rs  net.rs  process.rs
litebox_shim_linux/src/syscalls/signal/: mod.rs
litebox_shim_optee/: Cargo.toml
litebox_shim_optee/src/: lib.rs  msg_handler.rs
litebox_shim_optee/src/loader/: elf.rs  ta_stack.rs
litebox_shim_optee/src/syscalls/: cryp.rs  ldelf.rs  pta.rs  tee.rs
litebox_syscall_rewriter/src/: lib.rs
litebox_syscall_rewriter/tests/snapshots/: snapshot_tests__hello-diff.snap
