[package]
name = "litebox_platform_linux_kernel"
version = "0.1.0"
edition = "2024"

[features]

[build-dependencies]
bindgen = "0.71.0"

[dependencies]
bitflags = "2.9.0"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
paste = "1.0.15"
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
arrayvec = { version = "0.7.6", default-features = false }
rangemap = { version = "1.5.1", features = ["const_fn"] }
thiserror = { version = "2.0.6", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }

[dev-dependencies]
litebox_util_log = { version = "0.1.0", path = "../litebox_util_log" }
syscalls = { version = "0.6", default-features = false }

[lints]
workspace = true
