[package]
name = "litebox_shim_linux"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
bitflags = "2.9.0"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_platform_multiplex = { path = "../litebox_platform_multiplex/", version = "0.1.0", default-features = false }
litebox_util_log = { version = "0.1.0", path = "../litebox_util_log" }
once_cell = { version = "1.20.2", default-features = false, features = ["alloc", "race"] }
thiserror = { version = "2.0.6", default-features = false }
syscalls = { version = "0.6", default-features = false }
seq-macro = "0.3"
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

[features]
default = ["platform_linux_userland"]
platform_linux_userland = ["litebox_platform_multiplex/platform_linux_userland_with_linux_syscall"]
platform_windows_userland = ["litebox_platform_multiplex/platform_windows_userland"]
platform_linux_snp = ["litebox_platform_multiplex/platform_linux_snp"]

[dev-dependencies]
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
libc = "0.2.177"
tempfile = "3"

[lints]
workspace = true
